--- a/Client/package.json
+++ b/Client/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "chart.js": "^4.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
@@ -20,6 +22,7 @@
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
