--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,8 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "chart.js": "^4.3.3",
+    "chartjs-chart-geo": "^4.2.4",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
